# profit

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.sandbox.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yml  prometheus.yml
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  TRADING_FLOW.md
grafana/: grafana.ini
grafana/provisioning/dashboards/: dashboards.yml  profit-overview.json
grafana/provisioning/datasources/: datasource.yml
pgbouncer/: pgbouncer.ini
scripts/: download_ohlcv.py  run_backtest.py  start.sh  stop.sh
src/: main.py
src/agents/: __init__.py  base.py  orchestrator.py
src/agents/analyst/: __init__.py  agent.py  macro.py  micro.py  screener.py  sentiment.py
src/agents/developer/: __init__.py
src/agents/engineer/: schema.py  (+6 more)
src/api/: __init__.py  deps.py  schemas.py
src/core/: __init__.py  boot_sequence.py  config.py  consensus.py  distributed_lock.py  event_engine.py  metrics.py
src/data/: __init__.py  engine.py
src/exchange/: __init__.py  client.py  models.py  rate_limiter.py  tca.py  websocket.py
src/tracking/: agent_performance.py
tests/: __init__.py  conftest.py
tests/backtest/: __init__.py
tests/unit/: test_agent_performance.py  test_code_safety_checker.py  test_config.py  test_data_quality.py  test_distributed_lock.py  test_event_engine.py  test_indicators.py  test_llm_client.py  test_llm_memory.py  test_regime_classifier.py  test_screener.py  test_shadow_tester.py  test_strategy_registry.py  test_tca.py  test_walk_forward_optimizer.py
(+80 files in other folders)
